; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/svnlook/extr_svnlook.c_subcommand_filesize.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/svnlook/extr_svnlook.c_subcommand_filesize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svnlook_opt_state = type { i32 }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i32*)* @subcommand_filesize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @subcommand_filesize(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.svnlook_opt_state*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.svnlook_opt_state*
  store %struct.svnlook_opt_state* %10, %struct.svnlook_opt_state** %7, align 8
  %11 = load %struct.svnlook_opt_state*, %struct.svnlook_opt_state** %7, align 8
  %12 = call i32 @check_number_of_args(%struct.svnlook_opt_state* %11, i32 1)
  %13 = call i32 @SVN_ERR(i32 %12)
  %14 = load %struct.svnlook_opt_state*, %struct.svnlook_opt_state** %7, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @get_ctxt_baton(i32** %8, %struct.svnlook_opt_state* %14, i32* %15)
  %17 = call i32 @SVN_ERR(i32 %16)
  %18 = load i32*, i32** %8, align 8
  %19 = load %struct.svnlook_opt_state*, %struct.svnlook_opt_state** %7, align 8
  %20 = getelementptr inbounds %struct.svnlook_opt_state, %struct.svnlook_opt_state* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @do_filesize(i32* %18, i32 %21, i32* %22)
  %24 = call i32 @SVN_ERR(i32 %23)
  %25 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %25
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @check_number_of_args(%struct.svnlook_opt_state*, i32) #1

declare dso_local i32 @get_ctxt_baton(i32**, %struct.svnlook_opt_state*, i32*) #1

declare dso_local i32 @do_filesize(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
